Frontend Spelling Corrected in ANIMATION

--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
     <!-- Setup and start animation! -->
     <script>
         var typed = new Typed('#element', {
-            strings: ['Frontened Developer', 'Graphic Designer', 'Video Editor'],
+            strings: ['Frontend Developer', 'Graphic Designer', 'Video Editor'],
             typeSpeed: 60,
             loop: true,
             loopCount: Infinity,
