--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                         129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home_blob-img" x="12" y="18" href="img/perfil.png" />
+                                <image class="home_blob-img" x="12" y="18" href="img/profile_img.png" />
                             </g>
                         </svg>
                     </div>
@@ -146,7 +146,7 @@
             <span class="section_subtitle">My introduction</span>
 
             <div class="about_container container grid">
-                <img src="img/about.png" alt="image" class="about_img">
+                <img src="img/about.jpg" alt="image" class="about_img">
 
                 <div class="about_data">
                     <p class="about_description">Web developer, with extensive knowledge and some of experience, working
