--- a/index.html
+++ b/index.html
@@ -899,14 +899,14 @@
                 </ul>
 
                 <div class="footer_socials">
-                    <a href="https://www.facebook.com/roshanraj.raj.7370/" target="_blank" class="footer_social">
+                    <a href="https://www.facebook.com/techScript.roshan" target="_blank" class="footer_social">
                         <i class="uil uil-facebook-f"></i>
                     </a>
-                    <a href="https://www.instagram.com/devil_roshan_raj/" target="_blank" class="footer_social">
+                    <a href="https://www.instagram.com/techscript_roshan/" target="_blank" class="footer_social">
                         <i class="uil uil-instagram"></i>
                     </a>
-                    <a href="https://twitter.com/" target="_blank" class="footer_social">
-                        <i class="uil uil-twitter-alt"></i>
+                    <a href="https://www.linkedin.com/in/techscript-roshan/" target="_blank" class="footer_social">
+                        <i class="uil uil-linkedin"></i>
 
                     </a>
                 </div>
