Technical skills, Resume and social media links updated

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
             <div class="home_container container grid">
                 <div class="home_content grid">
                     <div class="home_social">
-                        <a href="https://www.linkedin.com/in/roshan-hash-creator/" target="_blank"
+                        <a href="https://www.linkedin.com/in/techscript-roshan/" target="_blank"
                             class="home_social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
                         <a href="https://dribbble.com/" target="_blank" class="home_social-icon">
                             <i class="uil uil-dribbble"></i>
                         </a>
-                        <a href="https://github.com/Roshan-hash-creator" target="_blank" class="home_social-icon">
+                        <a href="https://github.com/techScript-roshan" target="_blank" class="home_social-icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
 
@@ -246,7 +246,7 @@
                     </div>
 
                     <!-- SKILLS 2 -->
-                    <div class="skills_content skills_close">
+                    <div class="skills_content skills_close" style="display: none;">
                         <!-- Title of skills  -->
                         <div class="skills_header">
                             <i class="uil uil-server-network skills_icon"></i>
@@ -358,7 +358,7 @@
                     </div>
 
                     <!-- SKILLS 4 -->
-                    <div class="skills_content skills_close">
+                    <div class="skills_content skills_close" style="display: none;">
                         <!-- Title of skills  -->
                         <div class="skills_header">
                             <i class="uil uil-database skills_icon"></i>
@@ -936,6 +936,7 @@
     <!-- MAIN JS -->
 
     <script src="main.js"></script>
+    <!-- <script src="test.js"></script> -->
 
 
 
