--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title">10+</span>
+                            <span class="about_info-title">25+</span>
                             <span class="about_info-name">Months <br> experience</span>
 
                         </div>
@@ -314,7 +314,7 @@
 
                             <div>
                                 <h1 class="skills_title">Design</h1>
-                                <span class="skills_subtitle">More than <span id="design_time">9</span> Months</span>
+                                <span class="skills_subtitle">More than <span id="design_time">2</span> Years</span>
                             </div>
 
 
@@ -746,7 +746,7 @@
                             </div>
                         </div>
                         <p class="testimonial_description">I get a good impression, I carry out my project with all the
-                            possible quality and attention and support 24 hours a day.</p>
+                            possible quality and attention and support throughout a day.</p>
                     </div>
 
                     <!-- TESTIMONIAL 2 -->
@@ -836,7 +836,7 @@
 
                         <div>
                             <h3 class="contact_title">Location</h3>
-                            <span class="contact_subtitle">Saharsa - Bihar India 852127</span>
+                            <span class="contact_subtitle">GNDEC - Ludhiana India 141006</span>
                         </div>
                     </div>
                 </div>
@@ -912,7 +912,7 @@
                 </div>
             </div>
 
-            <p class="footer_copy">&copy;TeamRoshan. All right reserved</p>
+            <p class="footer_copy">&copy;2025 techScript_Roshan | All right reserved</p>
         </div>
     </footer>
 
