Blog section added in the Navbar

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#portfolio" class="nav_link">
-                            <i class="uil uil-scenery nav_icon"></i> Portfolio
+                        <a href="blog/sp_16_journey.html" class="nav_link">
+                            <i class="uil uil-scenery nav_icon"></i> Blog
                         </a>
                     </li>
                     <li class="nav_item">
